--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   margin: 10px;
   text-align: left;
   width: 300px;
-  height: 350px;
+  height: 400px;
 }
 
 .Review_img {
@@ -44,7 +44,6 @@
   margin-top: 5px;
   margin-left: 30px;
   margin-right: 3vw;
-  grid-column-start: 1;
   /* width: 40vw; */
   /* border: 2px solid black; */
 }
@@ -102,6 +101,20 @@
   font-size: 17px;
 }
 
+.single-review-votes-container {
+  white-space: nowrap;
+}
+
+.single-review-votes {
+  display: inline-block;
+  font-size: 17px;
+}
+
+.thumb {
+  margin: 5px;
+  width: 30px;
+  height: 20px;
+}
 .comments {
   grid-column: 1 / span 2;
   grid-row: 2 / span 1;
@@ -154,4 +167,22 @@
 #single-comment-date {
   color: grey;
   font-size: 14px;
+}
+
+.single-comment-body-container {
+  white-space: nowrap;
+}
+
+.single-comment-body {
+  display: inline;
+}
+
+#comment-thumb {
+  border: 1px solid black;
+  background-color: rgb(238, 238, 238);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 3px;
 }
