--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 /* App */
+
 .App {
   text-align: center;
-  border: 2px dotted red;
   margin: 0;
+  padding: 0;
 }
 
 .top {
@@ -24,6 +25,20 @@
   font-family: "Courier New", Courier, monospace;
 }
 
+.header {
+  text-align: left;
+  font-family: "Courier New", Courier, monospace;
+  border: 2px solid black;
+
+  background-color: black;
+  color: white;
+  margin-top: 0;
+}
+
+.header > p {
+  margin-left: 60px;
+}
+
 /* Nav */
 .Nav {
   display: flex;
@@ -32,7 +47,7 @@
 .Nav_link {
   padding: 10px;
   border: 3px solid white;
-  border-radius: 10%;
+  border-radius: 5%;
   margin: 10px;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
@@ -41,27 +56,32 @@
   color: rgb(87, 87, 87);
 }
 
-/* Review */
+/* Reviews */
 .Reviews_list {
   list-style: none;
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 2vw;
 }
 
 .Review {
   list-style-type: none;
   padding: 10px;
-  border: 2px solid black;
+  border: 2px solid grey;
   margin: 10px;
   text-align: left;
   width: 300px;
   height: 400px;
+  background-color: rgb(250, 250, 250);
 }
 
 .Review_img {
   width: 300px;
   height: 200px;
+  box-shadow: 5px 5px 5px rgb(156, 155, 155);
 }
 
 /* SingleReview */
@@ -243,11 +263,72 @@
   height: 25px;
 }
 
-#successful-comment {
+.successful-comment {
   margin: 1vw;
   font-weight: bold;
 }
 
 #tick {
   margin-left: 10px;
+}
+
+#comment-posting {
+  margin: 1vw;
+  color: grey;
+}
+
+/* Categories */
+
+.categories {
+  text-align: center;
+  padding: 0;
+}
+.categories-form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: rgb(238, 238, 238);
+}
+
+.categories-title {
+  padding: 10px;
+  padding-left: 40px;
+  background-color: black;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-decoration: underline;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.categories-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 0;
+  /* border: 2px dotted black; */
+}
+
+.category {
+  text-decoration: none;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 2%;
+  width: 400px;
+  font-size: large;
+  border: 3px solid grey;
+  font-family: "Courier New", Courier, monospace;
+  color: black;
+  font-weight: bold;
+}
+
+.category:hover {
+  background-color: rgb(78, 78, 78);
+  color: white;
+  cursor: pointer;
 }
