--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,28 @@
 /* App */
 
 .App {
-  text-align: center;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .top {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
+  width: auto;
   background-color: rgb(175, 174, 174);
-  height: auto;
-  padding: 3vh;
+  padding: 2vh;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.nav-left {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  /* float: left; */
 }
 
 .title {
@@ -25,23 +34,42 @@
   font-family: "Courier New", Courier, monospace;
 }
 
-.header {
-  text-align: left;
-  font-family: "Courier New", Courier, monospace;
-  border: 2px solid black;
-
-  background-color: black;
-  color: white;
-  margin-top: 0;
+.logged-user:hover {
+  cursor: pointer;
 }
 
-.header > p {
-  margin-left: 60px;
+.user-link {
+  text-decoration: none;
+}
+
+.user {
+  display: inline;
+  flex-direction: column;
+}
+
+#user-name {
+  text-decoration: none;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+}
+
+#user-image {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 3px solid white;
 }
 
 /* Nav */
+
+nav {
+  display: inline-block;
+  width: auto;
+}
+
 .Nav {
   display: flex;
+  /* float: left; */
 }
 
 .Nav_link {
@@ -57,6 +85,21 @@
 }
 
 /* Reviews */
+
+.header {
+  text-align: left;
+  font-family: "Courier New", Courier, monospace;
+  border: 2px solid black;
+
+  background-color: black;
+  color: white;
+  margin-top: 0;
+}
+
+.header > p {
+  margin-left: 60px;
+}
+
 .Reviews_list {
   list-style: none;
   display: flex;
@@ -84,7 +127,31 @@
   box-shadow: 5px 5px 5px rgb(156, 155, 155);
 }
 
+.sort-section {
+  text-align: left;
+  margin-left: 4vw;
+  margin-top: 4vh;
+}
+
+.sort-select {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.sort-button {
+  margin-left: 10px;
+  margin-right: 30px;
+}
+
+.arrow {
+  margin-left: 5px;
+  margin-right: 5px;
+}
 /* SingleReview */
+
+.single-review-error {
+  font-size: large;
+}
 .single-review {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -281,18 +348,20 @@
 
 .categories {
   text-align: center;
-  padding: 0;
+  background-color: rgb(238, 238, 238);
+  margin: 0;
 }
 .categories-form {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: rgb(238, 238, 238);
+  padding-bottom: 20vh;
 }
 
 .categories-title {
-  padding: 10px;
+  padding: 25px;
   padding-left: 40px;
   background-color: black;
   color: white;
@@ -310,14 +379,15 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
+  justify-content: space-around;
   margin: 0;
   /* border: 2px dotted black; */
 }
 
 .category {
   text-decoration: none;
-  margin: 10px;
-  padding: 10px;
+  margin-top: 30px;
+  padding: 15px;
   border-radius: 2%;
   width: 400px;
   font-size: large;
@@ -331,4 +401,76 @@
   background-color: rgb(78, 78, 78);
   color: white;
   cursor: pointer;
+}
+
+/* Users */
+
+.users-header {
+  padding: 25px;
+  padding-left: 40px;
+  background-color: black;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-decoration: underline;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  font-size: 30px;
+}
+.users-form {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 2vw;
+}
+
+.single-user {
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
+
+.single-user-img {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  border: 4px solid rgb(71, 71, 71);
+}
+
+.single-user:hover {
+  color: rgb(23, 170, 30);
+  cursor: pointer;
+}
+
+.single-user:hover .single-user-img {
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+  border: 5px solid rgb(23, 170, 30);
+}
+
+/* Home */
+
+.intro {
+  margin-top: 40px;
+  font-size: 18px;
+  margin-left: 40px;
+  margin-right: 40px;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.intro-list {
+  text-align: left;
+  margin-left: 50px;
+  margin-right: 50px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.intro-listed {
+  margin: 20px;
+  font-size: 20px;
 }
